# distributed-kirchhoff-migration

./: .gitignore  README.md  mpi_migration.py  requirements.txt  run.sh  settings.ini  setup.py  slurm_task.sh  test_migration.py
Migration_on_C/: CMakeLists.txt  Migration.cpp  implementation.h  test_main.cpp
demo_data/: seism.npy  settings.ini  syst_obs.csv
demo_data/Eikonal2NN.pb/variables/: variables.data-00000-of-00001  variables.index
demo_data/EikonalNN/: keras_metadata.pb  saved_model.pb
demo_data/EikonalNN.pb/: keras_metadata.pb  saved_model.pb
demo_data/EikonalNN.pb/variables/: variables.data-00000-of-00001  variables.index
demo_data/EikonalNN_new/: keras_metadata.pb  saved_model.pb
demo_data/EikonalNN_new/variables/: variables.data-00000-of-00001  variables.index
mpi_kirchhoff_migration/src/: __init__.py
nn_investigations/: EikonalNN.ipynb  TraveltimeNN.ipynb
